{
    "name": "HeroInput",
    "maps": [
        {
            "name": "Player",
            "id": "41e448b0-9811-4f8a-b353-045419e5df0f",
            "actions": [
                {
                    "name": "SaySomething",
                    "type": "Button",
                    "id": "fd5989cd-7805-4195-a573-83a6268498a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "7c948715-a63c-46c2-84af-516a0b607492",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "5cc5429e-f0ce-453e-9668-b7fc8c3f9cce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "81a0526a-5e4d-4dd3-9bc8-d52bd291c020",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SaySomething",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "791987b3-168a-466b-9b40-09aa52c7a817",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1f22d348-804b-406a-93ca-cbd8005ecaee",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "027bd6b8-39cf-4306-b740-3c757740e765",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "aaf20ca8-c9c3-42a7-a09d-a28df09f94ce",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0e5319cf-a7bf-49aa-899d-9bcf1e964b51",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ccdfda5f-ec37-4eab-ab1d-2d3b427b2c16",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}